syntax = "proto3";

option csharp_namespace = "AElf.Types.CSharp.Tests";

message TestParams
{
    bool field1 = 1;
    sint32 field2 = 2;
    uint32 field3 = 3;
    sint64 field4 = 4;
    uint64 field5 = 5;
    string field6 = 6;
    bytes field7 = 7;
 }
